# spoof

./: .gitignore  CHANGELOG.md  LICENSE  README.md  action.sh  customize.sh  module.prop  pool.json  post-fs-data.sh  service.sh  sett.txt  ternak_core_v4.sh  test_script.sh  uninstall.sh  update.json
.github/workflows/: auto-release.yml  build.yml
common/: gaid.sh  mac_bt.sh  persona_freeze.sh  proc_overlay.sh  prop_safety.sh  ssaid_abx.sh  ssaid_surgical.sh  state.sh  ternak_core.sh  widevine.sh
jni/: CMakeLists.txt  companion.cpp  envctl.c  main.cpp  ternakctl.c
module/: action.sh  module.prop  post-fs-data.sh  sepolicy.rule  ternak_core_v4.sh
module/webroot/: index.html
personas/: Pixel7Pro_Cheetah.txt  pixel7pro_dynamic.txt
sources/: CMakeLists.txt  build.sh
sources/jni/: main.cpp  zygisk.hpp
webroot/: index.html
